--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^16.8.4",
     "@types/webpack": "^4.4.32",
     "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
     "webpack": "^4.33.0",
@@ -24,7 +26,11 @@
     "webpack-dev-server": "^3.7.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "rxjs": "^6.5.2"
   }
 }
