--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/webpack": "^4.4.32",
@@ -27,6 +28,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.0.2",
+    "@types/lodash": "^4.14.134",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
